2018-02-18  Araki Ken  <arakiken@users.sf.net>

	* sdl2/ui_display.[ch]:
	  - The timing of calling present_displays() is fixed.
	  - SDL_WINDOWEVENT_FOCUS_{GAINED|LOST} events are processed.
	  - ui_display_resize(), ui_display_move(), ui_display_set_maximized()
	    and ui_display_set_title() are implemented.

	* wayland/ui_display.[ch]:
	  - 'int flag' is added to arguments of ui_display_set_maximized().

	* sdl2/ui_window.c:
	  #if defined(USE_WAYLAND) || defined(USE_SDL2)
	  => #ifndef MANAGE_ROOT_WINDOWS_BY_MYSELF

2018-02-18  Araki Ken  <arakiken@users.sf.net>

	* sdl2/ui_display.c: SDL_TEXTEDITING event is processed, and preediting
	  text is shown.

	* vt_term.h, vt_parser.c: vt_term_preedit() is always compiled.

	* mlconfig/Makefile.in: Typo of LIBS2_win32 is fixed.

2018-02-18  Araki Ken  <arakiken@users.sf.net>

	* README, doc/{ja,en}/README.win32: Updated.

	* sdl2/ui_display.c:
	  - XKeyEvent::str and XKeyEvent::parser are set in poll_event().
	  - ui_display_logical_to_physical_coordinates() applies the position
	    of SDL_Window.

	* sdl2/ui_window.c:
	  ui_window_get_str() processes XKeyEvent::str and XKeyEvent::parser.

	* sdl2/ui.h: str and parser are added to XKeyEvent.

	* im_fcitx.c: ui_im_status_screen is used on sdl2.

2018-02-17  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.win32: Updated.

	* mlimgloader/Makefile.in: LIBS2_sdl2_gdiplus is added.

	* mlconfig/Makefile.in: bindir=@bindir@ is added.

	* mlterm-menu/Makefile.in: Typo is fixed.

	* sdl2/ui.h: <SDL.h> => <SDL2/SDL.h> (for inputmethod/*)

	* configure.in:
	  - PKG_PATH_TOOL(pkg-config) => PKG_CHECK_TOOL(pkg-config)
	    (This makes it unnecessary to specify an absolute path.)
	  - "tr -d '\r'" is removed.
	  - MLIMGLOADER_LIBS=gdiplus if $have_gdiplus = "yes" but $gui != "win32"

2018-02-16  Araki Ken  <arakiken@users.sf.net>

	* libptyssh/vt_pty_ssh.c, vt_pty.h: vt_pty_ssh_set_pty_read_trigger()
	  is renamed to vt_pty_set_pty_read_trigger().
