@@ -507,9 +507,11 @@ AC_SUBST(TYPE_LOADER_OBJ)
 
 if test "$ml_cv_is_posix" = "yes" -a "$gui" != "quartz"; then
 	PKG_CHECK_MODULES(FONTCONFIG, fontconfig, have_fc=yes, have_fc=no)
-	FONTCONFIG_CFLAGS="$FONTCONFIG_CFLAGS -DUSE_FONTCONFIG"
-	AC_SUBST(FONTCONFIG_CFLAGS)
-	AC_SUBST(FONTCONFIG_LIBS)
+	if test "$have_fc" = "yes"; then
+		FONTCONFIG_CFLAGS="$FONTCONFIG_CFLAGS -DUSE_FONTCONFIG"
+		AC_SUBST(FONTCONFIG_CFLAGS)
+		AC_SUBST(FONTCONFIG_LIBS)
+	fi
 fi
 
 AC_ARG_ENABLE(anti_alias,
